--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <title> Maddie's Portfolio </title>
 </head>
 <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet", href="style/base.css">
-    <link rel="stylesheet", href="style/modules.css"
+    <link rel="stylesheet", href="style/modules.css">
     <header>
         <h1> Maddie's Portfolio </h1>
     </header>
     <aside id="nav-bar">
         <ul>
-           <li class="tab" data-content="all"><a href="#"> Home</a> </li>
+           <li class="tab" id="all"><a href="#">Home</a></li>
            <li class="tab" data-content="about"><a href="#"> About</a> </li>
            <li class="tab" data-content="projects"><a href="#"> Projects</a> </li>
               <select id= "title-menu">
@@ -26,7 +27,7 @@
            <h3> About Me </h3>
            <p>Welcome to my portfolio. Practice. Practice. Practice.</p>
         </section>
-        <section id="projects" class="tab-content">
+        <section id="projects" class="tab-content all">
            <article class="template" data-category="dog">
              <header>
                <h3 id="projTitle"> Project Title</h3>
