day3-new-style-changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <aside id="nav-bar">
         <ul>
-           <li class="tab" id="all"><a href="#">Home</a></li>
+           <li class="all"><a href="#"> Home</a></li>
            <li class="tab" data-content="about"><a href="#"> About</a> </li>
            <li class="tab" data-content="projects"><a href="#"> Projects</a> </li>
               <select id= "title-menu">
@@ -22,12 +22,12 @@
         </ul>
 
     </aside>
-    <main id="all">
+    <main>
         <section id="about" class="tab-content">
            <h3> About Me </h3>
            <p>Welcome to my portfolio. Practice. Practice. Practice.</p>
         </section>
-        <section id="projects" class="tab-content all">
+        <section id="projects" class="tab-content">
            <article class="template" data-category="dog">
              <header>
                <h3 id="projTitle"> Project Title</h3>
