--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title> Maddie's Portfolio </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Merriweather|Oswald:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet", href="vendors/style/normalize.css"
     <link rel="stylesheet", href="style/base.css">
-    <link rel="stylesheet", href="style/modules.css">
+    <link rel="stylesheet", href="style/layout.css">
+    <link rel="stylesheet", href="style/module.css">
 
     <script id="projectsTemplate" type="text/x-handlebars-template">
        <article class="project" data-title="{{projectTitle}}" data-category="{{projectCategory}}">
