--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet", href="style/layout.css">
     <link rel="stylesheet", href="style/module.css">
 
+
     <script id="projectsTemplate" type="text/x-handlebars-template">
        <article class="project" data-title="{{projectTitle}}" data-category="{{projectCategory}}">
          <header>
@@ -28,13 +29,13 @@
     </header>
     <aside id="nav-bar">
         <ul>
-           <li class="allContent"><a href="#"> Home</a></li>
-           <li class="tab" data-content="about"><a href="#"> About</a> </li>
-           <li class="tab" data-content="projects"><a href="#"> Projects</a> </li>
+           <li class="allContent"><a href="/"> Home</a></li>
+           <li class="tab" data-content="about"><a href="/about"> About</a> </li>
+           <li class="tab" data-content="projects"><a href="/projects"> Projects</a> </li>
               <select id="title-menu">
                 <option value="">Pick by Title</option>
               </select>
-           <li class="tab" data-content="contact"><a href="#"> Contact</a> </li>
+           <li class="tab" data-content="contact"><a href="/contact"> Contact</a> </li>
         </ul>
     </aside>
     <main>
@@ -57,8 +58,15 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
+    <script src="vendors/scripts/page.js"></script>
+
     <script src="scripts/portfolio.js"></script>
     <script src="scripts/projectView.js"></script>
-    <script> Project.fetchAll(); </script>
+    <script src="scripts/homeController.js"></script>
+    <script src="scripts/aboutController.js"></script>
+    <script src="scripts/projectsController.js"></script>
+    <script src="scripts/contactController.js"></script>
+    <script src="scripts/route.js"></script>
+
 </body>
 </html>
